Website looks kinda shit on iPhone, had to fix some sizing because of new text

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 }
 h1 {
 	font-family: 'Reenie Beanie', cursive;
-	font-size: 64pt;
+	font-size: 54pt;
 	color: #FBFEF9;
 	vertical-align: middle;
 	display: inline-block;
@@ -60,8 +60,8 @@ li {
 	display: inline-block;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 319px) {
 	h1 {
-		font-size: 36pt;
+		font-size: 28pt;
 	}
 }
